# job_tracker

./: .gitignore  LICENSE  Makefile  README.md  extract_deps.py  job-tracker-compose.yaml  pip-requirements.txt
back_end/: .flake8  Dockerfile  Makefile  pyproject.toml
back_end/src/job_tracker/: config.py  demo.py  extensions.py  tasks.py
back_end/src/job_tracker/api/: statistics.py  tags.py
back_end/src/job_tracker/pracujpl_POM/: base_navigation.py
back_end/test/integration/api/: test_statistics.py
back_end/test/integration/pracujpl_POM/: conftest.py
fla_front_end/: .env_sample  Dockerfile  Makefile  constraints.txt  pyproject.toml  start_flask_app.sh
fla_front_end/src/job_tracker_frontend/: __init__.py  pages.py  wsgi.py
fla_front_end/src/job_tracker_frontend/backend_comm/: __init__.py  allowed_choices.py  offers.py  statistics.py  status.py
fla_front_end/src/job_tracker_frontend/dash_sub_app/: __init__.py  base_widgets.py  input_validator.py
fla_front_end/src/job_tracker_frontend/dash_sub_app/backend/: exceptions.py  statistics.py  validation.py
fla_front_end/src/job_tracker_frontend/dash_sub_app/ui/: __init__.py  base_widgets.py  components.py
fla_front_end/src/job_tracker_frontend/pages/: __init__.py  about.py  offers.py  statistics.py  status.py
fla_front_end/src/job_tracker_frontend/pages/statistics_dash/: __init__.py
fla_front_end/src/job_tracker_frontend/pages/statistics_dash/ui/: components.py  defaults.py
fla_front_end/src/job_tracker_frontend/static/css/: base.css  offers.css  statistics_dash.css
fla_front_end/src/job_tracker_frontend/templates/: _navitems.html  base.html
fla_front_end/src/job_tracker_frontend/templates/pages/: about.html  home.html  offers.html  statistics_dash.html  status.html
front_end_FD/: Makefile  pyproject.toml
front_end_FD/src/job_tracker_frontend/: __init__.py
sel_fla_back_end/: Dockerfile  Dockerfile.dev  Makefile  constraints.txt  pyproject.toml  requirements_ORIG.txt  testrunner-docker-compose.yaml
sel_fla_back_end/src/job_tracker/: .env_sample  __init__.py  __main__.py  app.py  config.py  demo_data.sql  extensions.py  job_tracker_backend_api.yml  models.py  offers.py  search_attempt.py  statistics.py  status.py  tags.py  tasks.py  wsgi.py
sel_fla_back_end/src/job_tracker/api/: date_helpers.py  mydb.py  offers.py  statistics.py  status.py  tags.py
sel_fla_back_end/src/job_tracker/pracujpl_POM/: __init__.py  base_navigation.py  main_page.py  results_page.py
sel_fla_back_end/test/: conftest.py
sel_fla_back_end/test/integration/: conftest.py  test_int_basenavigation.py  test_int_main_page.py  test_int_offer_parsing.py
sel_fla_back_end/test/integration/api/: conftest.py  test_offers.py  test_statistics.py  test_status.py  test_tags.py
sel_fla_back_end/test/integration/data/Praca - Pracuj.pl_pliki/: 047784f554795870.css  3e560ca2f37f49c2.css  665-cc190596a87a6088.js  index-7f9081ab8a692f3f.js
sel_fla_back_end/test/integration/data/Praca tester, Warszawa – Pracuj.pl_pliki/: 634-f68410fcda122e7e.js  index-12d783c224d9a984.js  main-4a226184cbae3747.js
sel_fla_back_end/test/integration/pracujpl_POM/: conftest.py  test_int_basenavigation.py  test_int_main_page.py  test_int_offer_parsing.py
sel_fla_back_end/test/integration/pracujpl_POM/data/Praca - Pracuj.pl_pliki/: _app-6b4fc29177ba0aa2.js
sel_fla_back_end/test/integration/pracujpl_POM/data/Praca tester, Warszawa – Pracuj.pl_pliki/: _app-909722126b7be80e.js
sel_fla_back_end/test/unit/: test_app.py  test_base_navigation.py  test_basenavigation.py  test_main_page.py  test_offer_parsing.py  test_pracujpl_main_page.py
sel_fla_back_end/test/unit/api/: test_status.py
sel_fla_back_end/test/unit/pracujpl_POM/: conftest.py  test_base_navigation.py  test_main_page.py  test_offer_parsing.py
tester_jobs_auto/: pracujpl_POM.py
tester_jobs_auto/pracujpl_POM/: __init__.py  base_navigation.py  main_page.py  results_page.py
tester_jobs_stats/: pracujpl_POM.py
tests/unit/: test_basenavigation.py  test_offer_parsing.py  test_pracujpl_main_page.py
(+25 files in other folders)
