[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = job-tracker-backend 
version = "0.0.1"
dependencies = [
  "Flask",
  "selenium",
  "PyMySQL",
]

[project.optional-dependencies]
dev = [
  "bandit",
  "black",
  "flake8",
  "isort",
  "pylint",
  "pytest",
]
