[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-tracker-backend"
version = "0.0.1"
dependencies = [
  "Flask",
  "selenium",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyclean",
    "flake8",
    "flake8-type-checking",
    "isort",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "slow: mark a test that takes a long time to run.",
]
